--- a/test/fixtures/lessons.yml
+++ b/test/fixtures/lessons.yml
@@ -1,11 +1,6 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+<% 1.upto(5) do |x| %>
+superhero_lesson_<%= x %>:
+  title: Lesson <%= x %>
+  description: This is the <%= x %>th lesson!
+  project: superhero
+<% end %>
