--- a/test/fixtures/lessons.yml
+++ b/test/fixtures/lessons.yml
@@ -2,5 +2,6 @@
 superhero_lesson_<%= x %>:
   title: Lesson <%= x %>
   description: This is the <%= x %>th lesson!
+  video_uri: http://vimeo.com/video_<%= x %>
   project: superhero
 <% end %>
