--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -4,10 +4,18 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-superhero:
- title: Superheroes
- description: This is the first of all the projects!
+superhero_upper:
+  title: Superheroes Upper
+  description: This is the first of all the projects!
 
-painting:
-  title: Just painting
+superhero_lower:
+  title: Superheroes Lower
+  description: This is the first of all the projects!
+
+painting_upper:
+  title: Just painting Upper
+  description: This is the second project.
+
+painting_lower:
+  title: Just painting Lower
   description: This is the second project.
