Getting projects all set up

--- a/test/fixtures/project_sets.yml
+++ b/test/fixtures/project_sets.yml
@@ -1,4 +1,4 @@
-<% ['superhero', 'panting'].each do |theme| %>
+<% ['superhero', 'painting'].each do |theme| %>
 <%= theme %>:
   upper: <%= theme %>_upper
   lower: <%= theme %>_lower
