--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@ pickle-email-*.html
 *.bowerrc
 bower.json
 
+*.dump
+
 # Ignore pow environment settings
 .powenv
 # Ignore application configuration
