--- a/.gitignore
+++ b/.gitignore
@@ -35,17 +35,13 @@ pickle-email-*.html
 ## Environment normalization:
 /.bundle
 /vendor/bundle
+/vendor/assets/.bin
 
 # these should all be checked in to normalize the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
-
-# if using bower-rails ignore default bower_components path bower.json files
-/vendor/assets/bower_components
-*.bowerrc
-bower.json
 
 node_modules/*
 
