--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "doodles",
   "version": "1.0.0",
   "dependencies": {
-    "bower": "~1.7"
+    "bootstrap": "^3.3.7",
+    "codemirror": "5.12.0",
+    "jquery": "^3.2.1",
+    "jquery-ujs": "^1.2.2",
+    "marked": "^0.3.6",
+    "uikit": "2.25.0",
+    "underscore": "^1.8.3"
   },
   "engine": {
-    "node": "5.4.x",
-    "npm": "3.3.x"
-  },
-  "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "node": "7.2.x",
+    "yarn": "0.17.x"
   }
 }
