Add ability to use S3 creds in development via env variables

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,6 @@ node_modules/*
 
 # <alex> I use this file locally for a personal task list...
 TODO.md
+
+# @alex - I use this for tokens and stuff
+local_env.sh
