:broom: add collections, and clean up broken test stuff

--- a/test/fixtures/project_sets.yml
+++ b/test/fixtures/project_sets.yml
@@ -1,5 +1,2 @@
-<% ['superhero', 'painting'].each do |theme| %>
-<%= theme %>:
-  upper: <%= theme %>_upper
-  lower: <%= theme %>_lower
-<% end %>
+superhero: {}
+painting: {}
